# AutoDiffer

./: .gitignore  .travis.yml  README.md  build.sh  config.sh  get_code_cov.sh  makefile  travis_qmake_gcc_cpp11_gcov.pro
3PL/: README.md
App/: CMakeLists.txt  bin  config.sh
App/src/: CMakeLists.txt  main.cpp
App/tests/: CMakeLists.txt
App/tests/src/: CMakeLists.txt  test_app.cpp  test_vars.h
AutoDiffer/: CMakeLists.txt  README.md  config.sh  coverage.sh
AutoDiffer/core/src/: ADValue.cpp  All.cpp  AutoDiffer.cpp  CMakeLists.txt  README.md
AutoDiffer/core/tests/: CMakeLists.txt  README.md  test_main.cpp
AutoDiffer/core/tests/src/: CMakeLists.txt  README.md  test_ADNode.cpp  test_ADValue.cpp  test_ALL.cpp  test_AutoDiffer.cpp  test_AutoDiffer_correctness.cpp  test_AutoDiffer_invalid.cpp  test_AutoDiffer_multithread.cpp  test_AutoDiffer_vector.cpp  test_MAL.cpp  test_Parser.cpp  test_vars.h
AutoDiffer/include/: ADNode.hpp  ADValue.hpp  AutoDiffer.hpp  Parser.hpp  README.md
AutoDiffer/include_examples/: AutoDiffer.hpp  README.md
AutoDiffer/install/include/: ADNode.hpp  ADValue.hpp  AutoDiffer.hpp  MyAwesomeLibrary.hpp
MyAwesomeLibrary/: config.sh
MyAwesomeLibrary/core/src/: MyAwesomeLibrary.cpp
docs/: Implementation.ipynb  Intro.ipynb  README.md  documentation.ipynb  documentation.md  milestone1.ipynb  milestone2.ipynb  milestone2_progress.txt
docs/.ipynb_checkpoints/: Intro and background-checkpoint.ipynb  Intro-checkpoint.ipynb  documentation-checkpoint.ipynb  milestone1-checkpoint.ipynb  milestone2-checkpoint.ipynb
examples/: Makefile  README.md  example  example.cpp  example_adnode1.cpp  example_adnode_scalar.cpp  example_autodiffer1.cpp  example_autodiffer2.cpp  example_autodiffer_jacobian.cpp  example_autodiffer_scalar.cpp  example_autodiffer_scalar2.cpp  example_autodiffer_vector.cpp
examples/live_demo/: Makefile  README.md  example_live_demo.cpp
examples/multithreading/: Makefile  README.md  example_multiple_functions.cpp
examples/multithreading/benchmark/: Makefile  README.md  benchmark.sh  collect_data_openmp.sh  example_openmp.cpp  example_std_thread.cpp
examples/multithreading/benchmark/data/: README.md  data.ipynb  openmp_case_A.txt  openmp_case_B.txt  std_case_A.txt  std_case_B.txt
examples/multithreading/benchmark/data/.ipynb_checkpoints/: data-checkpoint.ipynb
examples/multithreading/large/: collect_data_std.sh  data.ipynb  data_openmp.txt  data_std.txt  example_openmp.cpp  example_std_thread.cpp
examples/multithreading/medium/: collect_data_openmp.sh  collect_data_std.sh  data.ipynb  data_openmp.txt  data_std.txt  example_openmp.cpp  example_std_thread.cpp
install/3PL/googletest/lib/pkgconfig/: gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
src/: demo.cc  hello.cc  hello.d
